# 13f-skill

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/commands/: 13f.md
src/thirteen_f/: __init__.py  cli.py  config.py  scheduler.py
src/thirteen_f/analysis/: __init__.py  clustering.py  diff.py  signals.py
src/thirteen_f/default_data/: funds.yaml
src/thirteen_f/edgar/: __init__.py  client.py  parser.py  submissions.py
src/thirteen_f/reports/: __init__.py  fund_report.py  stock_report.py  universe.py
src/thirteen_f/sec/: __init__.py  cusip_lookup.py  quarterly_data.py
src/thirteen_f/storage/: __init__.py  database.py  exports.py  models.py  stock_storage.py
tests/: __init__.py  test_clustering.py  test_diff.py  test_parser.py
